--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,9 @@
                        <groupId>org.eluder.coveralls</groupId>
                        <artifactId>coveralls-maven-plugin</artifactId>
                        <version>4.3.0</version>
+                       <configuration>
+                           <repoToken>OAIxitSJWosysTGcF5aocbT02L2lzcgge</repoToken>
+                       </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
