CL: Fix codacy coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ before_install:
 script: "mvn clean test jacoco:report coveralls:report"
 
 after_success:
-  - java -cp ~/codacy-coverage-reporter-assembly-latest.jar com.codacy.CodacyCoverageReporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
+  - java -cp ~/codacy-coverage-reporter-assembly-latest.jar com.codacy.CodacyCoverageReporter -l Java -r target/site/jacoco/jacoco.xml --projectToken ae6a2f5f152b4f7bbdd99377aa44d28a
 
