--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.pholser</groupId>
+            <artifactId>junit-quickcheck-core</artifactId>
+            <version>0.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.pholser</groupId>
+            <artifactId>junit-quickcheck-generators</artifactId>
+            <version>0.7</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-common</artifactId>
             <version>2.7.3</version>
@@ -107,6 +119,16 @@
                 <repository>
                     <id>mvnrepository.com</id>
                     <url>https://mvnrepository.com/artifact</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>central.maven.org</id>
+                    <url>http://central.maven.org/maven2</url>
                     <releases>
                         <enabled>true</enabled>
                     </releases>
