--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ env:
     - DOCKER_COMPOSE_VERSION=1.22.0
     - JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF-8
     - MAVEN_OPTS="-Xmx2048m"
-    - CODACY_PROJECT_TOKEN=ae6a2f5f152b4f7bbdd99377aa44d28a
 
 services:
   - docker
@@ -23,6 +22,7 @@ jdk:
   - oraclejdk8
 
 before_install:
+  - git checkout master
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
   - chmod +x docker-compose
