Update docker related files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,6 @@ services:
     image: java-algorithms:latest
     container_name: java-algorithms
     volumes:
-      - .:/java-algorithms
+      - ./.git:/java-algorithms/.git
+      - ./src:/java-algorithms/src
+      - ./pom.xml:/java-algorithms/pom.xml
