--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,13 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>javax.xml.bind</groupId>
+                        <artifactId>jaxb-api</artifactId>
+                        <version>2.3.1</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <repoToken>OAIxitSJWosysTGcF5aocbT02L2lzcgge</repoToken>
                 </configuration>
