--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
             <version>2.4.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-websocket</artifactId>
+            <version>9.0.44</version>
+        </dependency>
     </dependencies>
 
     <repositories>
